# cryptogram

./: .gitattributes  Cargo.toml  README.md  cryptogram.go  go.mod  pubspec.yaml
.github/workflows/: cli.yml
bootstrap/: go.mod  go.sum  id.json  main.go  package.json
bootstrap/src/: chat.js  index.js  signaling-server.js
chat/: chat.go  message.go  misc.go
cli/: Cargo.toml  go.mod  go.sum  main.go  package.json  tsconfig.json
cli/chat/: api.go  chat.go  room.go  ui.go
cli/cli/: args.go  completer.go  executor.go  suggestions.go  ui.go
cli/discovery/: dht.go  mdns.go
cli/misc/: config.go  misc.go
cli/node/: api.go  init.go  ipfs.go  libp2p.go  type.go
cli/repl/: completer.go  executor.go  suggestions.go
cli/src/: app.ts  auth.ts  index.ts  main.rs  matrix.ts
cli/ui/: events.go  init.go  log.go  views.go
core/: Cargo.toml
discovery/: Cargo.toml  dht.go  mdns.go  mdns_test.go
discovery/src/: lib.rs
discovery/src/mdns/: dns.rs  mod.rs
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart  route_generator.dart
lib/models/: account.dart  stellar.dart
lib/services/: blockchain.dart  crypto.dart  database.dart
lib/views/: index.dart  splash_screen.dart  wrapper.dart
misc/: misc.go  stream.go
node/: type.go
test/: widget_test.dart
ui/: views.go
web/: index.html  manifest.json  package.json  tsconfig.json
web/pages/: index.tsx
web/services/: libp2p.ts  peerid.ts
web/types/: libp2p-bootstrap.d.ts  libp2p-kad-dht.d.ts  libp2p-mplex.d.ts  libp2p-webrtc-star.d.ts  libp2p-websockets.d.ts  libp2p.d.ts
(+16 files in other folders)
