[package]
name = "cryptogram-discovery"
version = "0.1.0"
authors = ["gbaranski <root@gbaranski.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5", features = [ "net" ] }
socket2 = "0.4"
lazy_static = "1.4"
log = "0.4"
dns-parser = { version = "0.8", optional = true }
thiserror = "1.0"
bytes = "1.0"
bitflags = "1.2"

[features]
default = [ "mdns" ]
mdns = [ "dns-parser" ]
